--- a/data_analysis/data_checking_ywh.ipynb
+++ b/data_analysis/data_checking_ywh.ipynb
@@ -1610,11 +1610,76 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## tokenizer shape test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_ids': tensor([[   0, 3982, 2073, 1599, 2073,    3, 3714,   18,    2]]), 'token_type_ids': tensor([[0, 0, 0, 0, 0, 0, 0, 0, 0]]), 'attention_mask': tensor([[1, 1, 1, 1, 1, 1, 1, 1, 1]])}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import AutoTokenizer, AutoConfig\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained('klue/roberta-large', max_length=256)\n",
+    "\n",
+    "sequence_a = \"이것은 짧은 시퀀스 입니다.\"\n",
+    "\n",
+    "padded_sequences = tokenizer(sequence_a, \n",
+    "            padding=True, return_tensors=\"pt\",\n",
+    "            truncation=True,\n",
+    "            max_length=256)\n",
+    "\n",
+    "print(padded_sequences)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dataset shape"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class RE_Dataset(torch.utils.data.Dataset):\n",
+    "  \"\"\" Dataset 구성을 위한 class.\"\"\"\n",
+    "  def __init__(self, pair_dataset, labels):\n",
+    "    self.pair_dataset = pair_dataset\n",
+    "    self.labels = labels\n",
+    "\n",
+    "  def __getitem__(self, idx):\n",
+    "    item = {key: val[idx].clone().detach() for key, val in self.pair_dataset.items()}\n",
+    "    item['labels'] = torch.tensor(self.labels[idx])\n",
+    "    return item\n",
+    "\n",
+    "  def __len__(self):\n",
+    "    return len(self.labels)"
+   ]
   }
  ],
  "metadata": {
