feat - Data - 개체명 인식기를 이용한 데이터 증강
#34

--- a/data_analysis/dhs_error_rate.ipynb
+++ b/data_analysis/dhs_error_rate.ipynb
@@ -146,8 +146,8 @@
     "\n",
     "        # 라벨별 오답률 계산을 위한 데이터프레임에 오답률 계산 결과 추가\n",
     "        error_rate_df = pd.concat([error_rate_df, pd.DataFrame({'label': list(label_categories)[label],\n",
-    "                                                                'train_data_label_count': label_df.count()['label'],\n",
-    "                                                                'dev_data_label_count': pred_label_df.count()['pred_label'],\n",
+    "                                                                'dev_label_count': label_df.count()['label'],\n",
+    "                                                                'dev_pred_count': pred_label_df.count()['pred_label'],\n",
     "                                                                'error_rate': 1 - (label_df['label'] == label_df['pred_label']).sum() / label_df['label'].count()},\n",
     "                                                            index=[0])], ignore_index=True)\n",
     "\n",
